{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 34,
  "lineage": "eba69eb5-c12f-5e50-86d3-11c0e05b54cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:223249277559:instance/i-014fd63bb6d7a7e11",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014fd63bb6d7a7e11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_sg",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b23b93cf29669f8e"
              }
            ],
            "primary_network_interface_id": "eni-0b23b93cf29669f8e",
            "private_dns": "ip-172-31-1-32.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.32",
            "public_dns": "ec2-100-53-70-168.compute-1.amazonaws.com",
            "public_ip": "100.53.70.168",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f41c8aa1971ed09b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mysg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ac66c21b0f801cb",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4bb213e96117730"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "223249277559",
            "id": "i-014fd63bb6d7a7e11",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.my_sg",
            "aws_security_group.mysg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223249277559:security-group/sg-0e4bb213e96117730",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4bb213e96117730",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mysg",
            "name_prefix": "",
            "owner_id": "223249277559",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-016bafeca15d936c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "223249277559",
            "id": "sg-0e4bb213e96117730",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223249277559:security-group-rule/sgr-03e6e16bf6ad2f1bf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03e6e16bf6ad2f1bf",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e4bb213e96117730",
            "security_group_rule_id": "sgr-03e6e16bf6ad2f1bf",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "223249277559",
            "id": "sgr-03e6e16bf6ad2f1bf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.mysg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "mysg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223249277559:security-group-rule/sgr-069e3ee1543863854",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-069e3ee1543863854",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e4bb213e96117730",
            "security_group_rule_id": "sgr-069e3ee1543863854",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "223249277559",
            "id": "sgr-069e3ee1543863854",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.mysg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "mysg_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223249277559:security-group-rule/sgr-0b8c698540637864d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b8c698540637864d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e4bb213e96117730",
            "security_group_rule_id": "sgr-0b8c698540637864d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "223249277559",
            "id": "sgr-0b8c698540637864d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.mysg"
          ]
        }
      ]
    }
  ]
}